--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.19.0",
-    "consign": "^0.1.6",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jwt-simple": "^0.5.6",
-    "knex": "^0.19.4",
-    "multer": "^1.4.2",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "pg": "^7.12.1"
+    "body-parser": "1.19.0",
+    "consign": "0.1.6",
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "jwt-simple": "0.5.6",
+    "knex": "0.19.4",
+    "multer": "1.4.2",
+    "passport": "0.4.0",
+    "passport-jwt": "4.0.0",
+    "pg": "7.12.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3"
+    "nodemon": "1.19.3"
   }
 }
